--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exploring the Body Temperature and Activity Levels of Mice Over Time - An Interactive Visualization</title>
+  <title>Exploring the Body Temperature and Activity Levels of Mice Over Time - An Interactive Visualization!</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
