--- a/index.html
+++ b/index.html
@@ -3,26 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exploring the Body Temperature and Activity Levels of Mice Over Time - An Interactive Visualization!</title>
+  <title>Mouse Experiment Data Visualization</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    <div id="controls">
-      <label for=""gender">Select Gender:</label>
-      <select id=""gender">
-        <option value="female">Female</option>
-        <option value="male">Male</option>
-      </select>
-      <input type="range" id="day-slider" min="1" max="14" step="1" value="1">
-      <span id="selected-day">Day 1</span>
-    </div>
-
-    <div id="charts">
-      <div id="temperature-chart"></div>
-      <div id="activity-chart"></div>
-    </div>
-
-    <script src="script.js"></script>
+  <div id="slider-container"></div>
+  <div id="charts">
+    <div id="temperature-chart"></div>
+    <div id="activity-chart"></div>
+  </div>
+  <div id="value-display"></div>
+  <script src="script.js"></script>
 </body>
 </html>
