Cleaned Data, Little Mouse Guy, Gender Filtering

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
+  <h1>Mouse Experiment Data Analysis</h1>
+  <div id="gender-buttons">
+    <button class="gender-button active" data-gender="all">All</button>
+    <button class="gender-button" data-gender="m">Male</button>
+    <button class="gender-button" data-gender="f">Female</button>
+  </div>
   <div id="slider-container"></div>
   <div id="charts">
     <div id="temperature-chart"></div>
