--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-  <h1>Mouse Experiment Data Analysis</h1>
+  <h1>How does Gender affect Temperature & Activity over Time?</h1>
   <div id="gender-buttons">
     <button class="gender-button active" data-gender="all">All</button>
     <button class="gender-button" data-gender="m">Male</button>
