Updated the title.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mouse Experiment Data Visualization</title>
+  <title>DSC 106 | Project 3</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-  <h1>How does Gender affect Temperature & Activity over Time?</h1>
+  <h1>How do the body temperatures/activity levels of male/female mice differ? What trends can we observer over time?</h1>
   <div id="gender-buttons">
     <button class="gender-button active" data-gender="all">All</button>
     <button class="gender-button" data-gender="m">Male</button>
