--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     What trends emerge in body temperature and activity levels between male and female mice over time?
   </div>
 
+  <!-- Volume-->
+  <div id="volume-container">
+    <label for="volume">Volume:</label>
+  </div>
+
   <!-- Gender Buttons -->
   <div id="gender-buttons">
     <button class="gender-button active" data-gender="all">All</button>
