adjusted light value legend

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="legend-label">No Light (Nighttime)</div>
     </div>
     <div class="legend-item">
-        <div class="legend-color-box" style="background-color: transparent; border: 1px solid #ccc;"></div>
+        <div class="legend-color-box" style="background-color: transparent; border: 1px dashed #ccc;"></div>
         <div class="legend-label">Light (Daytime)</div>
     </div>
   </div>
