development process yapping

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
     </p>
     <h3>Design Rationale</h3>
     <h3>Development Process</h3>
+    <p>
+      The majority of the work for this project was done via one computer in person. This includes the majority of the design process, intial templating, and implementation. We sketched out our initial ideas on a online web paint app, and after that, began to create our visualization. After that period, the remaining work was done remotely, mostly covering small changes to the design, encodings, and visualizations. Overall, this project took us roughly ~15 hours, with the brunt of the time spent on getting the visualization to look the way we had prototyped it, and fiddling around with the D3 library.
+    </p>
   </div>
 
   <script src="script.js"></script>
